[build-system]
requires = ["setuptools>=61.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easier"
dynamic = ["version"]
description = "Tools for analysis"
readme = "README.md"
authors = [
    {name = "Rob deCarvalho", email = "unlisted@unlisted.net"}
]
license = {text = "MIT"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "pytest",
]

[project.scripts]
"ezr.makefile" = "easier.create_makefile:main"

[project.urls]
Homepage = "https://github.com/robdmc/easier"
Repository = "https://github.com/robdmc/easier"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["easier"]
include-package-data = true
zip-safe = false