[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easier"
version = "1.9.2"
description = "Tools for analysis"
readme = "README.md"
authors = [
    {name = "Rob deCarvalho", email = "unlisted@unlisted.net"}
]
license = {text = "MIT"}
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "astropy",
    "asgiref",
    "click",
    "cog",
    "cryptography",
    "cvxpy",
    "daiquiri",
    "dataset",
    "django",
    "duckdb",
    "fuzzypicker",
    "gatspy",
    "google-api-python-client",
    "google-auth",
    "google-generativeai",
    "gspread",
    "holoviews",
    "ibis-framework",
    "importlib-metadata",
    "IPython",
    "jinja2",
    "matplotlib",
    "numpy",
    "pandas",
    "pandas-gbq",
    "pandera",
    "polars",
    "psutil",
    "python-dateutil",
    "requests",
    "scikit-learn",
    "scipy",
    "simple-salesforce",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
]

[project.scripts]
"ezr.makefile" = "easier.create_makefile:main"

[project.urls]
Homepage = "https://github.com/robdmc/easier"
Repository = "https://github.com/robdmc/easier"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["easier*"]

[tool.black]
line-length = 120


[tool.ruff]
line-length = 120
ignore = ["F821"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
